<resources>
    <string name="app_name">GProject</string>
    <string-array name="categories">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
    </string-array>
    <string name="phone_hint">0989990303</string>
    <string name="btn_call_name">send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- LogIn & SignUp Strings-->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
    <string name="middle_name">Mid name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="land_phone_number">Land phone number</string>
    <string name="address">Address</string>
    <string name="select_company">select sim type</string>
    <string name="select_category">select category</string>
    <!--End SignUp & login Strings -->

</resources>