<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@drawable/scrollbar_register_color">
        <LinearLayout
            android:id="@+id/LinearInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:text="aaa"
                        android:inputType="text"
                        android:background="@drawable/bg_edittext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_middle_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/middle_name"
                        android:inputType="text"
                        android:background="@drawable/bg_edittext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:background="@drawable/bg_edittext"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_mobile_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="text"
                    android:background="@drawable/bg_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:hint="@string/land_phone_number"
                android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_national_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="National Number"
                    android:inputType="text"
                    android:background="@drawable/bg_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:background="@drawable/bg_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtInLayoutRegPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtInLayoutRegPasswordConfirm"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_edittext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/register_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reg_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_login_signup_btn"
                android:text="@string/Register"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </LinearLayout>
</ScrollView>