<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_company"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/custom_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/custom_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/call_btn_bg"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textSize="100sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_down_spinner_24"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:textStyle="bold"
                android:textAlignment="center"
                />
            <RelativeLayout
                android:layout_alignParentEnd="true"
                android:id="@+id/spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/call_btn_bg"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textSize="100sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_down_spinner_24"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="8dp"
        android:gravity="start"
        android:text="Please enter a phone number"
        android:textColor="#000000"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/phoneBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="@drawable/phone_box_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusDown="@id/pass_box"/>


    <EditText
        android:id="@+id/pass_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="@drawable/phone_box_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        android:imeOptions="actionDone"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_operation_request_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/call_btn_bg"
        android:text="@string/btn_call_name"
        android:textColor="@drawable/call_btn_text"
        android:textSize="25sp" />




</LinearLayout>